<resources>
    <string name="app_name">Alura viagens</string>
    <string name="banner_inicial_dos_pacotes">Banner inicial dos pacotes</string>
    <string name="especiais">Especiais</string>
    <string name="Pais">Pais</string>
    <string name="brasil">Brasil</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="cvc">CVC</string>
    <string name="finalizar_compra">FINALIZAR COMPRA</string>
    <string name="preco">R$ 421,50</string>
    <string name="texto_informativo">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="nome_do_cartao">Nome do cartão</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzç ABCDEFGHIJKLMNOPQRSTUVXYWZÇ/u0020</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
    <string name="conteudo_do_banner_inicial">conteudo_do_banner_inicial</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
</resources>