<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#FF9800"
        android:contentDescription="@string/conteudo_do_banner_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra_realizada_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/compra_realizada_com_sucesso"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_parabens"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_parabens"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_parabens"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra_confira_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="#757575"
        android:text="@string/confira_o_resumo_da_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner_inicial" />

    <ImageView
        android:id="@+id/resumo_compra_imagem_pacote"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagem_do_pacote"
        android:scaleType="centerCrop"
        android:textColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_confira_resumo"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_local_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_imagem_pacote"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_compra_data_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#757575"
        tools:text="8/12 - 10/12 de 2022"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_local_pacote"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_local_pacote" />

    <TextView
        android:id="@+id/resumo_compra_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#757575"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_data_viagem"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_data_viagem"
        tools:text="R$ 243,99" />

</androidx.constraintlayout.widget.ConstraintLayout>